# keyword-match-experiment

./: Cargo.toml  README.md  mixed.txt  non_keyword.txt  rust-toolchain.toml
benches/: bench.rs
src/: generate_keyword.rs  hash.rs  keyword_generated.rs  keyword_generator.rs  keyword_list.rs  keyword_match.rs  lib.rs  utils.rs
