[package]
name = "keyword-match-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
lazy_static = "1.4.0"
compact_str = "0.7.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true